<resources>
    <string name="app_name">Learn Digital Skills</string>
    <string name="logo_alt_text">App Logo</string>

    <string name="welcome_title_text">Welcome !</string>
    <string name="welcome_description_text">
        Are you ready to begin your digital literacy journey ? \n\nJoin us and unlock your full
        potential !
    </string>
    <string name="welcome_button_register_text">Create Account</string>
    <string name="welcome_button_login_text">Login</string>

    <string name="register_title">Create Account</string>
    <string name="register_username_information">Your generated username is the following :\n\u2022
        Please make a note of it, as you will need it to login</string>
    <string name="register_generated_username">Generated Username</string>
    <string name="register_password_information">You will need to create a password for the application,
    you will then need to enter the password a second time to ensure you have written it correctly.</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_button_terms_and_conditions_text">Terms and Conditions</string>
    <string name="register_checkbox_button_terms_and_conditions_text">I agree to the above Terms and Conditions</string>
    <string name="register_button_create_account_text">Create Account</string>

    <string name="terms_and_conditions_description">
        Due to data protection your password is not accessible to us as we encrypt your password
        when creating your account, as such we will not be able to help you in the case that you
        forget your username or password.
        \n\nThis application will store information related
        to your actions within the app, like marking articles as complete.
        \n\nThis ensures that you are able to view your progress through the guides on different
        devices, in addition to helping us recommend you an article for your next read.
        \n\nShould you wish to delete your account at any time, there is an option available within
        the application which would delete all data related to your account.
    </string>

    <string name="login_title">Login</string>
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_button_login_text">Login</string>

    <string name="menu_home_text">Home</string>
    <string name="menu_articles_text">Articles</string>
    <string name="menu_settings_text">Settings</string>

    <string name="home_title">Home</string>
    <string name="home_progress_title_text">Progress</string>
    <string name="home_total_articles_title_text">Articles\nCompleted :</string>
    <string name="home_total_articles_value">0/0</string>
    <string name="home_recommended_article_title_text">Recommended Article</string>
    <string name="home_recommended_article_description_text">Based on your progression through
    the articles, we recommend that you take a look at the following article next : </string>
    <string name="home_about_us_title_text">About Us</string>
    <string name="home_about_us_description_text">This application aims to empower you, the user,
    to gain confidence and competence with using digital tools and systems.\n\nWe have made articles
    to help guide you in using some of these tools and systems to assist you on your journey to
    digital empowerment.</string>

    <string name="article_item_title_text">Title</string>
    <string name="article_item_topic_text">Topic</string>
    <string name="article_item_short_description_text">Short Description</string>
    <string name="article_item_checkBox_text">Completed</string>

    <string name="article_title_text">Placeholder Article Title</string>
    <string name="article_video_title_text">Demonstration Video</string>
    <string name="article_content_title_text">Content</string>
    <string name="article_content_text">
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content\n
        Placeholder Content
    </string>
    <string name="article_button_complete_text">Complete</string>

    <string name="articles_title">Articles</string>
    <string name="articles_search_bar_text">Search Articles</string>
    <string name="articles_filter_text">Filter</string>
    <string name="articles_clear_filters_text">Clear</string>

    <string name="articles_filter_topics_title_text">Topics</string>
    <string name="articles_filter_checkBox_handling_information_and_content_text">Handling Information
    and Content</string>
    <string name="articles_filter_checkBox_communicating_text">Communicating</string>
    <string name="articles_filter_checkBox_being_safe_and_legal_online_text">Being Safe and Legal
    Online</string>
    <string name="articles_filter_checkBox_problem_solving_text">Problem Solving</string>
    <string name="articles_filter_checkBox_transacting_text">Transacting</string>

    <string name="settings_title">Settings</string>
    <string name="settings_account_title">Account</string>
    <string name="settings_button_notifications_text">Notifications</string>
    <string name="settings_button_change_password_text">Change Password</string>
    <string name="settings_button_log_out_text">Log Out</string>
    <string name="settings_other_title">Other</string>
    <string name="settings_button_help_text">Help</string>
    <string name="settings_button_contact_us_text">Contact Us</string>
    <string name="settings_dangerous_area_title">Dangerous Area</string>
    <string name="settings_button_delete_account_text">Delete Account</string>

    <string name="change_password_title_text">Change Password</string>
    <string name="change_password_description_text">To change your password, first you will need
    to enter your current password. Subsequently, you will enter the new password twice.</string>
    <string name="change_password_old_password_hint">Old Password</string>
    <string name="change_password_new_password_hint">New Password</string>
    <string name="change_password_new_password_confirm_hint">Confirm New Password</string>
    <string name="change_password_button_change_password_text">Change Password</string>

    <string name="help_title_text">Help</string>
    <string name="help_description_text">You can use this page to gain more information about
    what you are able to do on each of the pages within this application.</string>
    <string name="help_home_title_text">Home</string>
    <string name="help_home_description_text">Here on the home screen, you are able to review
    your progress through the articles we have created, you will also be recommended a particular
    article to help guide you in your journey. Finally, you can learn about why this application was
    made.</string>
    <string name="help_articles_title_text">Articles</string>
    <string name="help_articles_description_text">Here on the articles screen, you are able to
    search for different articles depending on your particular needs, you can also mark any of them
    as complete which will aid you in tracking your progress. Finally, you can filter the list
    using various metrics to focus on particular articles.</string>
    <string name="help_settings_title_text">Settings</string>
    <string name="help_settings_description_text">Here on the settings screen, you are able to
    perform actions related to your account like; modifying the notification settings for the
    application, changing your password for the application, logging out of the application or
    deleting your account. Finally you are also able to find contact information should you wish to
    provide feedback on anything within application.</string>

    <string name="contact_us_description">If you would like to reach out to us or provide some
    feedback, you can contact us on the following email : \n\n LearnDigitalSkills3094@gmail.com</string>

    <string name="delete_account_description_text">Are you <b>sure</b> you want to delete your
        account? Your data will permanently be deleted. \n\nPlease enter your current password to
        delete your account.</string>
    <string name="delete_account_password_hint">Password</string>

</resources>