<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="338dp"
        android:layout_height="99dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:background="@color/black"
            android:contentDescription="@string/logo_alt_text"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="307dp"
        android:layout_height="107dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="185dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/register_button"
            style="@style/Button.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_button_register_text" />

        <Button
            android:id="@+id/login_button"
            style="@style/Button.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_button_login_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>